# world-class-trading-bot

./: .gitignore  CONTRIBUTING.md  Dockerfile  GITHUB_REPOSITORY_SUMMARY.md  LICENSE  README.md  SECURITY.md  env.example  pyproject.toml  pytest.ini  requirements.txt  telegram_bot_main.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
clean_trading_bot/: .gitignore  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
clean_trading_bot/docs/: BYBIT_INTEGRATION_GUIDE.md  COMPREHENSIVE_INTEGRATION_SUMMARY.md  DEVELOPMENT_SUMMARY.md
clean_trading_bot/examples/: bybit_with_natural_language.py
clean_trading_bot/src/trading_bot/models/: __init__.py  market_data.py
clean_trading_bot/src/trading_bot/pine_scripts/: __init__.py  mean_reversion_generator.py  momentum_generator.py
clean_trading_bot/src/trading_bot/strategies/: __init__.py  mean_reversion_strategy.py  ml_strategy.py  momentum_strategy.py
clean_trading_bot/src/trading_bot/telegram/: __init__.py  telegram_bot.py
clean_trading_bot/src/trading_bot/tools/: bybit_trading_tool.py
docs/: CURRENT_STATE_SUMMARY.md  FINAL_INTEGRATION_STATUS.md  FRIEND_SHARE_SUMMARY.md
examples/: bybit_crypto_trading.py  portfolio_manager_demo.py  world_class_trading_bot.py
src/trading_bot/: __init__.py  __main__.py
src/trading_bot/backtesting/: __init__.py  backtest_engine.py
src/trading_bot/config/: __init__.py  settings.py
src/trading_bot/models/: analysis.py  portfolio.py
src/trading_bot/pine_scripts/: base_generator.py
src/trading_bot/strategies/: base_strategy.py  grid_strategy.py  strategy_manager.py
src/trading_bot/telegram/: telegram_bot.py
src/trading_bot/tools/: __init__.py  natural_language_translator.py
src/trading_bot/utils/: __init__.py  logging.py  rate_limiter.py
tests/: conftest.py  test_bybit_integration.py  test_complete_integration.py  test_natural_language_translation.py  test_telegram_bot.py
tools/: __init__.py  bybit_trading_tool.py  market_data_tool.py  portfolio_analysis_tool.py  technical_analysis_tool.py
